1.3.6.dev0
 * #53: Log to syslog in addition to existing console logging. Add --syslog-verbosity flag to
   customize the log level. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/inspect-your-backups/
 * #178: Look for .yml configuration file extension in addition to .yaml.
 * Remove Python cache files before each Tox run.
 * Add #borgmatic Freenode IRC channel to documentation.
 * Add Borg/borgmatic hosting providers section to documentation.
 * Add files for building documentation into a Docker image for web serving.
 * Upgrade project build server from Drone 0.8 to 1.1.
 * Build borgmatic documentation during continuous integration.

1.3.5
 * #153: Support for various Borg directory environment variables (BORG_CONFIG_DIR, BORG_CACHE_DIR,
   etc.) via options in borgmatic's storage configuration.
 * #177: Fix for regression with missing verbose log entries.

1.3.4
 * Part of #125: Color borgmatic (but not Borg) output when using an interactive terminal.
 * #166: Run tests for all installed versions of Python.
 * #168: Update README with continuous integration badge.
 * #169: Automatically sort Python imports in code.
 * Document installing borgmatic with pip install --user instead of a system Python install.
 * Get more reproducible builds by pinning the versions of pip and tox used to run tests.
 * Factor out build/test configuration from tox.ini file.

1.3.3
 * Add validate-borgmatic-config command, useful for validating borgmatic config generated by
   configuration management or even edited by hand.

1.3.2
 * #160: Fix for hooks executing when using --dry-run. Now hooks are skipped during a dry run.

1.3.1
 * #155: Fix for invalid JSON output when using multiple borgmatic configuration files.
 * #157: Fix for seemingly random filename ordering when running through a directory of
   configuration files.
 * Fix for empty JSON output when using --create --json.